test/visibility/import/edgeCases/multipleDef3.good
multipleDef3.chpl:7: error: 'x' has multiple definitions in this scope
multipleDef3.chpl:8: note: it was first defined through the 'import' statement here
multipleDef3.chpl:2: note: leading to the definition here
multipleDef3.chpl:9: note: redefined through the 'import' statement here
multipleDef3.chpl:5: note: leading to the definition here
